# ML-AI-Rust

./: .gitignore  Cargo.toml  dataset.csv  dataset_cualitativo.csv
src/: codifo_misc.txt  main.rs  modules.rs
src/Modules/: kmeans.rs  mod.rs
src/modules/: ID3.rs  create_dataset.rs  csv_manipulation.rs  dataset_manipulation.rs  dataset_struct.rs  distancias.rs  graphs.rs  inercia.rs  kmeans.rs  knn_ia.rs
