[package]
name = "AI_ML_project"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = "0.29"
rand = "0.8"
rand_chacha = "0.3"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"

smartcore = "0.3.2"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
rand_isaac = "0.3.0"
plotters = "0.3"
